--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/my-styles.css">
     <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>-->
 
     <!-- endbuild -->
@@ -48,6 +49,7 @@
     <script src="scripts/controller/SearchController.js"></script>
     <script src="scripts/directive/FooterDirective.js"></script>
     <script src="scripts/directive/NavbarDirective.js"></script>
+    <script src="scripts/directive/SearchFormDirective.js"></script>
     <script src="scripts/service/ProductService.js"></script>
 
 </body>
