added Google fonts

--- a/Haiku/index_first.html
+++ b/Haiku/index_first.html
@@ -3,7 +3,6 @@
 
   <!-- <link href="/normalize.css" rel="stylesheet"> -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
   
   <style>
     header {
@@ -11,7 +10,6 @@
       background: url('https://raw.githubusercontent.com/cfierbin/cfierbin.github.io/master/images/DSCN1354.JPG');
       background-size: cover;
 	  font-size: 20px;
-	  font-family: 'Shadows Into Light';
       color: white;
     }
     
@@ -24,7 +22,7 @@
     }
 	
 	p {
-		font-size: 24px;
+		font-size: 20px;
 		margin: 0px;
 	}
 	
@@ -43,8 +41,7 @@
     li {
       display: inline;
       padding: 0px 10px 0px 10px;
-//	  font-family: "Comic Sans MS", cursive, sans-serif;
-	  font-family: 'Shadows Into Light';
+	  font-family: "Comic Sans MS", cursive, sans-serif;
     }
 	
     article {
@@ -55,14 +52,13 @@
 	
     div {
       width: 250px;
-      height: 300px;
-    //  background: #F0F;
-	background: rgba(255,0,255,0.5);
+      height: 250px;
+      background: #F0F;
       margin: 20px 30px 10px 10px;
 	  padding: 0px 10px 0px 0px;
       text-align: right;
-	  font-size: 20px;
-	  font-family: 'Shadows Into Light';
+	  font-size: 14px;
+	  font-family: "Comic Sans MS", cursive, sans-serif;
 	  float: left;
     }
     
@@ -105,7 +101,7 @@
   
 
   <div>
-    <h2>Sand Castles</h2>
+    <h2>Sand castles</h2>
     <p>Sand castles </p>
     <p>On the deserted beach</p>
     <p>My far-away country </p>
@@ -114,20 +110,13 @@
   
   
   <div>
-    <h2>Windy Afternoon</h2>
+    <h2>Windy afternoon</h2>
     <p>Windy afternoon</p>
     <p>Your smile</p>
     <p>On a stranger's face</p>
     <button class="my_button">Like</button>
   </div>
   
-  <div>
-    <h2>Wedding Dress</h2>
-    <p>this wedding dress</p>
-    <p>nothing but</p>
-    <p>winter memories</p>
-    <button class="my_button">Like</button>
-  </div>
   
   <div>
     <h2>Summer</h2>
